platform/policies/cilium-allow-jupyterhub-to-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-jupyterhub-to-apiserver
  namespace: jupyterhub
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/component: hub
  egress:
    - toEntities:
        - kube-apiserver
